--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,109 @@ body {
     padding: 112px 0;
 }
 
+/*==============TREND============*/
+.trend {
+    margin-top: 60px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.trend_title {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.trend_title::after {
+    content: "";
+    display: block;
+    width: 66px;
+    border: 3px solid #b59f5b;
+    margin: 14px auto 0 auto;
+}
+
+.trend_container {
+    margin-top: 30px;
+    display: flex;
+}
+
+.trend_container-item {
+    width: 25%;
+    display: flex;
+    margin-right: 5px;
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+    height: 320px;
+    flex-direction: column-reverse;
+    text-transform: uppercase;
+    text-align: start;
+    color: #ffffff;
+    font-weight: bold;
+    background-size: cover;
+    z-index: 1;
+}
+
+.trend_garden {
+    background-image: url(../images/trend1.jpg);
+}
+
+.trend_cheeses {
+    background-image: url(../images/trend2.jpg);
+}
+
+.trend_mountains {
+    background-image: url(../images/trend3.jpg);
+}
+
+.trend_lemons {
+    background-image: url(../images/trend4.jpg);
+}
+
+.trend_container-item:last-child {
+    margin-right: 0;
+}
+
+.trend_container-item::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    content: "";
+    background-color: #000000;
+    opacity: 0.6;
+}
+
+
+.trend_container-item-content {
+    padding: 30px;
+    border: 3px solid #b59f5b;
+}
+
+.trend_links {
+    display: flex;
+    text-align: start;
+    flex-wrap: wrap;
+}
+
+.trend_links a {
+    text-decoration: none;
+    font-size: 14px;
+    margin-right: 30px;
+    text-transform: uppercase;
+    color: #b59f5b;
+}
+
+.trend_links a:hover {
+    text-decoration: underline;
+}
+
+.trend_container-item-content p {
+    margin-top: 18px;
+
+}
+
 /*==============MAIN============*/
 
 
@@ -135,7 +238,7 @@ body {
     margin-right: 30px;
 }
 
-.news_image>img {
+.news_image > img {
     display: block
 }
 
