--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,129 @@ body {
     font-size: 15px;
 }
 
+/*==============TREND============*/
+.products {
+    margin-top: 60px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.products_title {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.products_title::after {
+    content: "";
+    display: block;
+    width: 66px;
+    border: 3px solid #b59f5b;
+    margin: 14px auto 0 auto;
+}
+
+.products_container {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.products_container-item {
+    width: 35%;
+    max-width: 350px;
+    min-height: 440px;
+    display: flex;
+    box-sizing: border-box;
+    position: relative;
+    text-align: start;
+    color: #000000;
+    background-repeat: no-repeat;
+    background-size: initial;
+    background-position-x: center;
+    z-index: 1;
+}
+
+.products_spot {
+    background-image: url(../images/shop-item-desk1.jpg);
+}
+
+.products_doll {
+    background-image: url(../images/shop-item-desk2.jpg);
+}
+
+.products_frame {
+    background-image: url(../images/shop-item-desk3.jpg);
+}
+
+.products_container-item:last-child {
+    margin-right: 0;
+}
+
+.products_container-item-content-title {
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.products_container-item-content {
+    padding: 55px 20px 20px 20px;
+    min-height: 270px;
+    margin-top: 170px;
+    border: 3px solid #b59f5b;
+}
+
+.products_container-item-content-text {
+    font-size: 15px;
+    margin-top: 18px;
+}
+
+.products_container-item-content-text a {
+    text-decoration: none;
+    color: #b59f5b;
+}
+
+.products_container-item-content-text a:hover {
+    text-decoration: underline;
+}
+
+.products_container-item-content-shop {
+    display: flex;
+    margin-top: 25px;
+    justify-content: space-between;
+}
+
+.products_container-item-content-shop-price {
+    display: flex;
+    font-size: 20px;
+    font-weight: bold;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.products_container-item-content-shop-price-before {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-decoration: line-through;
+}
+
+.products_container-item-content-shop-button {
+    background-color: #b59f5b;
+    border: none;
+    color: #ffffff;
+    padding: 20px 30px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.products_container-item-content-shop-button:hover {
+    background-color: #323232;
+}
+
+
 /*==============ASIDE============*/
 
 .aside-bar {
