--- a/css/media.css
+++ b/css/media.css
@@ -62,6 +62,21 @@
         background-image: url(../images/shop-item-tablet3.jpg);
     }
 
+    .popup_form {
+        width: 64%;
+        height: 37em;
+        position: absolute;
+        top: 3%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: translate(0%, 0%);
+        margin: 5% 18%;
+        padding: 55px 30px 50px;
+        box-sizing: border-box;
+        background-color: #ffffff;
+    }
+
 }
 
 @media (max-width: 1200px) and (orientation: portrait) {
@@ -182,5 +197,19 @@
         background-image: url(../images/shop-item-mobile3.jpg);
     }
 
+    .popup_form {
+        width: 90%;
+        height: 37em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: translate(5%, 10%);
+        margin: 0;
+        padding: 55px 30px 50px;
+        box-sizing: border-box;
+        background-color: #ffffff;
+    }
 
 }
